# tpm2_ek_cert_gen

./: .gitignore  Cargo.toml  README.md
src/: main.rs
