[package]
name = "tpm2_cert_gen"
version = "0.1.0"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tss-esapi = "4.0.10-alpha.2"
anyhow = "1.0.38"

openssl = "0.10.32"
