[package]
name = "tpm2_ek_cert_gen"
version = "0.1.1"
description = "Tool to create TPM2 EK certificate if the vendor didn't ship one"
license = "MIT"
repository = "https://github.com/puiterwijk/tpm2_ek_cert_gen"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
openssl = "0.10.32"
tss-esapi = "4.0.10-alpha.2"
